fix navbar overflow

--- a/CSS/navigator.css
+++ b/CSS/navigator.css
@@ -98,7 +98,7 @@ nav a {
   text-decoration: none;
   color: var(--primary);
   display: flex;
-  padding: 0.5em 0.8em;
+  padding: 0.5em 0.6em;
   border-radius: 0.3em;
   align-items: center;
   gap: 0.2em;
